# birdsense

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
bridge/: Dockerfile  bird_names_nl.json  bridge.py  classifier.py  config.py  database.py  requirements.txt
site/: CNAME  index.html
web/: Dockerfile  app.py  database.py  requirements.txt
web/static/css/: style.css
web/templates/: config.html  dashboard.html  test.html
