[project]
name = "birdsense"
version = "1.0.0"
description = "AI-powered bird species classification API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.pylint.main]
ignore-paths = ["venv", ".venv", "models"]
jobs = 0  # Auto-detect CPU cores

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-outside-toplevel",
    "broad-exception-caught",
    "line-too-long",  # Let formatter handle this
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-locals = 20

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["bridge", "web"]
